import { remark } from "remark";
import remarkHtml from "remark-html";
import Plugin from "./index.mjs";

describe("remark slug", () => {
  it("should add id", () => {
    remark()
      .use(Plugin)
      .use(remarkHtml)
      .process(
        `## hello world

this is me.
`,
        (err, { value: contents }) => {
          expect(err).toBeUndefined();
          expect(contents).toMatchSnapshot();
        },
      );
  });

  it("should encode non-ASCII ids", () => {
    remark()
      .use(Plugin)
      .use(remarkHtml)
      .process(
        `## الإعداد الأساسي

this is me.
`,
        (err, { value: contents }) => {
          expect(err).toBeUndefined();
          expect(contents).toMatchSnapshot();
        },
      );
  });
});
