// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`remark slug should add id 1`] = `
"<h2 id="user-content-hello-world"><span id="user-content-hello-world"></span>hello world</h2>
<p>this is me.</p>
"
`;

exports[`remark slug should encode non-ASCII ids 1`] = `
"<h2 id="user-content-%D8%A7%D9%84%D8%A5%D8%B9%D8%AF%D8%A7%D8%AF-%D8%A7%D9%84%D8%A3%D8%B3%D8%A7%D8%B3%D9%8A"><span id="user-content-%D8%A7%D9%84%D8%A5%D8%B9%D8%AF%D8%A7%D8%AF-%D8%A7%D9%84%D8%A3%D8%B3%D8%A7%D8%B3%D9%8A"></span>الإعداد الأساسي</h2>
<p>this is me.</p>
"
`;
